addlotta.ejs & credits.ejs & style.css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>ผลฉลากกินแบ่ง lotta</title>
 </head>
 <body>
+    <h1><a href='http://localhost:5000/'>Lotta XD</a></h1>
+    <a href='/addlotta'>เพิ่มเลขรางวัล</a>
+    <a href='/showbyid'>เช็คเลขรางวัล</a>
+    <a href='/credits'>เครดิต</a>
     <table>
         <tr>
-            <th>date</th>
-            <th>type</th>
-            <th>id</th>
-            <th>num</th>
-            <th>reward</th>
+            <th>งวดวันที่</th>
+            <th>หมวด</th>
+            <th>เลข</th>
+            <th>จำนวน</th>
+            <th>รางวัล</th>
         </tr>
         <% lotta.forEach(function(lotta) { %>
         <tr>
