--- a/views/credits.ejs
+++ b/views/credits.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1><a href='http://localhost:5000/'>Lotta XD</a></h1>
-    <br>Ittikorn  Nitthavorn  1630901435</br>
+    <br>Ittikorn  Nitthavorn  1630901435  section : 236A</br>
     <br>อ้างอิง</br>
     <br><a href='https://www.glurgeek.com/education/backendexpressmysqlep2/'>https://www.glurgeek.com/education/backendexpressmysqlep2/</a></br>
     <br><a href='https://www.glurgeek.com/education/backendexpressmysqlep3/'>https://www.glurgeek.com/education/backendexpressmysqlep3/</a></br>
